# PermutoPy

./: README.md  README_PY.md  pyproject.toml
src/permuto/: __init__.py  cli.py  exceptions.py  permuto.py
tests/: test_permuto.py
