[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "permuto"
version = "0.1.0" # Match __init__.py
authors = [
  { name="Your Name", email="your@email.com" },
]
description = "Lightweight JSON templating engine with variable substitution and reverse mapping."
readme = "README.md" # Or README_PY.md
license = { file="LICENSE" }
requires-python = ">=3.7" # jsonpointer might need >= 3.6 or 3.7
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Intended Audience :: Developers",
]
dependencies = [
    "jsonpointer>=2.0", # Specify a reasonable minimum version
]

[project.urls]
"Homepage" = "https://github.com/your-username/permuto-py" # Example URL
"Bug Tracker" = "https://github.com/your-username/permuto-py/issues" # Example URL

[project.optional-dependencies]
test = [
    "pytest>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"] # find packages in src directory

