[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "permuto"
version = "0.1.0" # Match __init__.py
authors = [
  { name="Harri Pehkonen", email="harry.pehkonen@gmail.com" },
]
description = "Lightweight JSON templating engine with variable substitution and reverse mapping."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Intended Audience :: Developers",
]
dependencies = [
    "jsonpointer>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/HarryPehkonen/PermutoPy" # Example URL
"Bug Tracker" = "https://github.com/HarryPehkonen/PermutoPy/issues" # Example URL

[project.optional-dependencies]
test = [
    "pytest>=6.0",
]

# --- ADD THIS SECTION ---
[project.scripts]
permuto = "permuto.cli:main"
# --- END ADDITION ---

[tool.setuptools.packages.find]
where = ["src"]
