[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "permuto"
version = "0.1.0" # Match __init__.py
authors = [
  { name="Harri Pehkonen", email="harry.pehkonen@gmail.com" },
]
description = "Lightweight JSON templating engine with variable substitution and reverse mapping."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Intended Audience :: Developers",
]
dependencies = [
    "jsonpointer>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/HarryPehkonen/PermutoPy"
"Bug Tracker" = "https://github.com/HarryPehkonen/PermutoPy/issues"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
]

dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]

[project.scripts]
permuto = "permuto.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W", "C90", "N", "UP", "S", "BLE", "FBT", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "LOG", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
